# Quorum

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  GITHUB_SETUP.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
council/: __init__.py  orchestrator.py
council-ai/: .env.example  LICENSE  README.md  pyproject.toml
council-ai/council/: __init__.py  cli.py  config.py  consensus.py  counselor.py  env_keys.py  memory.py  models.py  orchestrator.py  synthesis.py  usage.py
council-ai/council/middleware/: __init__.py  cache_mw.py  logging_mw.py  rate_limit_mw.py  retry_mw.py
council-ai/council/packs/: __init__.py  brainstorm.py  code_review.py  debate.py  product.py  research.py
council-ai/council/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
council-ai/examples/: local_ollama.json  mixed_providers.json  openrouter.json
council-ai/tests/: conftest.py  test_config.py  test_counselor.py  test_memory.py  test_middleware.py  test_openrouter_provider.py  test_orchestrator.py  test_orchestrator_memory_usage.py  test_packs.py  test_synthesis.py  test_until_consensus.py  test_usage.py
council/providers/: google_provider.py  openai_provider.py
examples/: basic_usage.py
web/: Dockerfile  docker-compose.yml
web/api/: main.py  session.py
web/api/routes/: council.py  providers.py  ws.py
web/frontend/: index.html  package.json
web/frontend/src/: App.jsx
