[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "council-ai"
version = "1.0.0"
description = "Quorum — multi-model AI deliberation framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Laith AlKhdour" }]
keywords = ["ai", "llm", "multi-model", "deliberation", "quorum", "council"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/laithtak/Quorum"
Repository = "https://github.com/laithtak/Quorum"
Issues = "https://github.com/laithtak/Quorum/issues"
Changelog = "https://github.com/laithtak/Quorum/blob/main/CHANGELOG.md"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
web = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "websockets>=12.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4.0"]

[project.scripts]
council = "council.cli:app"

[tool.setuptools.packages.find]
include = ["council*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
